tests/should_fail/cycle.stderr
error: Mutually recursive functions: when calling `g`...
  --> cycle.rs:12:1
   |
12 | pub fn g(x: bool) {
   | ^^^^^^^^^^^^^^^^^
   |
note: then `g` calls `f`...
  --> cycle.rs:14:9
   |
14 |         f();
   |         ^^^
note: finally `f` calls `g`.
  --> cycle.rs:7:5
   |
 7 |     g(true);
   |     ^^^^^^^

error: aborting due to 1 previous error

